<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:foreground="@drawable/_40d6246a50976e8c7ac91d2acc048d7"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/_40d6246a50976e8c7ac91d2acc048d7"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/go_upgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/upgrade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/go_donate"
        app:layout_constraintStart_toEndOf="@+id/go_main" />

    <Button
        android:id="@+id/go_donate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/donate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/go_upgrade" />

    <Button
        android:id="@+id/go_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/your_shop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/go_upgrade"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_money_ck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="money_add_click"
        android:text="@string/click"
        app:layout_constraintBottom_toTopOf="@+id/go_upgrade"
        app:layout_constraintEnd_toStartOf="@+id/go_donate"
        app:layout_constraintStart_toEndOf="@+id/go_main" />

    <TextView
        android:id="@+id/out_umoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="104dp"
        android:text="@string/your_money"
        android:textColor="#FF6D00"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <Button
        android:id="@+id/buy_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/prgr_butt_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/prgr_cycl_one2"
        app:layout_constraintTop_toBottomOf="@+id/buy_one2"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

    <ProgressBar
        android:id="@+id/prgr_cycl_one2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="265dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:max="100"
        android:min="0"
        android:progress="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prgr_cycl_one"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/prgr_text_cost_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/prgr_tcost_one"
        android:textAlignment="center"
        android:textColor="#FFAB00"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/prgr_cycl_one2"
        app:layout_constraintStart_toEndOf="@+id/prgr_cycl_one2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prgr_cycl_one"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buy_one2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:onClick="but_1"
        android:text="@string/prgr_butt_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/prgr_cycl_one"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/prgr_cycl_one"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="265dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:max="100"
        android:min="0"
        android:progress="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/out_umoney"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/prgr_text_cost_one2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/prgr_tcost_one"
        android:textAlignment="center"
        android:textColor="#FFAB00"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/prgr_cycl_one"
        app:layout_constraintStart_toEndOf="@+id/prgr_cycl_one2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.8"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buy_one3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/prgr_butt_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/prgr_cycl_one3"
        app:layout_constraintTop_toBottomOf="@+id/buy_one"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/prgr_cycl_one3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="265dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:max="100"
        android:min="0"
        android:progress="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prgr_cycl_one2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/prgr_text_cost_one3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/prgr_tcost_one"
        android:textAlignment="center"
        android:textColor="#FFAB00"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/prgr_cycl_one3"
        app:layout_constraintStart_toEndOf="@+id/prgr_cycl_one2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prgr_cycl_one2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buy_one4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/prgr_butt_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/prgr_cycl_one4"
        app:layout_constraintTop_toBottomOf="@+id/buy_one3"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/prgr_cycl_one4"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="265dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:max="100"
        android:min="0"
        android:progress="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prgr_cycl_one3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/prgr_text_cost_one4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/prgr_tcost_one"
        android:textAlignment="center"
        android:textColor="#FFAB00"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/prgr_cycl_one4"
        app:layout_constraintStart_toEndOf="@+id/prgr_cycl_one2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prgr_cycl_one3"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buy_one5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/prgr_butt_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/prgr_cycl_one5"
        app:layout_constraintTop_toBottomOf="@+id/buy_one4"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/prgr_cycl_one5"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="265dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:max="100"
        android:min="0"
        android:progress="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prgr_cycl_one4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/prgr_text_cost_one5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/prgr_tcost_one"
        android:textAlignment="center"
        android:textColor="#FFAB00"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/prgr_cycl_one5"
        app:layout_constraintStart_toEndOf="@+id/prgr_cycl_one2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prgr_cycl_one4"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buy_one6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/prgr_butt_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/prgr_cycl_one6"
        app:layout_constraintTop_toBottomOf="@+id/buy_one5"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/prgr_cycl_one6"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="265dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:max="100"
        android:min="0"
        android:progress="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prgr_cycl_one5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/prgr_text_cost_one6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/prgr_tcost_one"
        android:textAlignment="center"
        android:textColor="#FFAB00"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/prgr_cycl_one6"
        app:layout_constraintStart_toEndOf="@+id/prgr_cycl_one2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prgr_cycl_one5"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>